1-Apr: Updated wording

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 						<div class="desc">
 							<h2 class="subheading">Hello I'm</h2>
 							<h1 class="mb-4">Laura Collins</h1>
-							<p class="mb-4">I am a cyber security geek striving to help developers understand our world.</p>
-							<p class="mb-4">I have a passion for running and amateur photography.</p>
+							<p class="mb-4">I am a cyber security geek aiming to help developers understand our world.</p>
+							<p class="mb-4">I have a passion for (slow) running and (amateur) photography.</p>
 						</div>
 					</div>
 				</div>
