1-Apr: Added Insta link

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li><a target="_blank" href="https://www.linkedin.com/in/lauracollins1994/"><i class="icon-linkedin" style="color: #000000"></i> LinkedIn</a></li>
+					<li><a target="_blank" href="https://www.instagram.com/lorcol/"><i class="icon-instagram" style="color: #000000"></i> Instagram</a></li>
 					<li><a href="mail:contactme@lauramcollins.co.uk"><i class="icon-envelope" style="color: #000000"></i> Contact Me</a></li>
 				</ul>
 			</nav>
